[#100054060] fix slide 3 on mobile

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -42,7 +42,7 @@
     background-size: cover;
   }
 
-  .items { height: 12rem; }
+  .items { height: 20rem; }
   .slick-dots { bottom: 1rem; }
   .slick-slider { margin-bottom: 0; }
 }
